<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Common -->
	<string name="app_name">Terminal Commander</string>
    <string name="commander">Commander</string>
    <string name="terminal">Terminal</string>
    <string name="history_up">[ ^ ]</string>
    <string name="slash">/</string>
    <string name="ok_btn">[ OK ]</string>
    <string name="cancel_btn">[ Cancel ]</string>
    <string name="select_app">Select application</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="directory">Directory</string>
    <string name="file">File</string>
    <!-- Panel column titles -->
    <string name="title_file_name">Name</string>
    <string name="title_file_size">Size</string>
    <string name="title_file_modify_time">Modify time</string>
    <!-- Action bar buttons -->
    <string name="action_bar_btn_shift">" Shift "</string>
    <string name="action_bar_btn_ctrl">" Ctrl "</string>
    <string name="action_bar_btn_tab">" Tab "</string>
    <string name="action_bar_btn_commander">"[ >_ ]"</string>
    <string name="action_bar_btn_cancel">"Cancel"</string>
    <!-- Main menu items -->
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_quit">Quit</string>
    <string name="menu_item_sorting">Sorting by</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="submenu_sorting_by_file_name">Sorting by name</string>
    <string name="submenu_sorting_by_size">Sorting by size</string>
    <string name="submenu_sorting_by_modify_time">Sorting by modify</string>
    <!-- Dialog titles -->
    <string name="copy_title">Copy</string>
    <string name="rename_title">Rename</string>
    <string name="move_title">Move</string>
    <string name="make_dir_title">New directory</string>
    <string name="delete_title">Delete</string>
    <string name="create_new_directory_title">Create a new directory</string>
    <!-- Toast content text -->
    <string name="toast_dir_size">"Directory size: "</string>
    <string name="toast_all_directory_path">"Directory location: "</string>
    <string name="toast_cannot_read_directory_exception">"Cannot read directory "</string>
    <string name="toast_no_items_selected_for_copy">No items selected for copy operation</string>
    <string name="toast_no_enough_permissions_for_delete">"No enough permissions to delete source file "</string>
    <string name="toast_cannot_rename_multiple_objects">Cannot rename multiple objects</string>
    <string name="toast_no_objects_selected">No objects selected</string>
    <string name="toast_history_is_empty">Panel history is empty</string>
    <string name="toast_not_correct_path">Location is not correct</string>
    <string name="toast_not_correct_file_name">File name is not correct</string>
    <!-- Dialog content text-->
    <string name="dlg_copy_file">"Copy file(s) "</string>
    <string name="dlg_to">to:</string>
    <string name="dlg_copy">"Copy "</string>
    <string name="dlg_files_to">" files to:"</string>
    <string name="dlg_move_file">"Move file(s) "</string>
    <string name="dlg_rename_file">"Rename "</string>
    <string name="dlg_move">"Move "</string>
    <string name="dlg_delete_file">"Delete file(s) "</string>
    <string name="dlg_delete">"Delete "</string>
    <string name="dlg_files">" files"</string>
    <string name="dlg_left_panel_history">History of left panel</string>
    <string name="dlg_right_panel_history">History of right panel</string>
    <string name="dlg_properties_type">Type:</string>
    <string name="dlg_properties_path">Path:</string>
    <string name="dlg_properties_size">Size:</string>
    <string name="dlg_properties_created">Created:</string>
    <string name="dlg_properties_modified">Path:</string>
    <string name="dlg_properties_permission">Permission:</string>
    <!-- Preferences strings -->
    <string name="pref_application_title">Application</string>
    <string name="pref_shell_executor_key">pref_shell_executor_key</string>
    <string name="pref_shell_executor_title">Set default command executor</string>
    <string name="pref_shell_executor_summary">Shell executor</string>
    <string name="pref_shell_executor_dlg_title">Setup shell executor</string>
    <string name="pref_clear_locations_key">pref_clear_location_key</string>
    <string name="pref_clear_location_title">Clear location history</string>
    <string name="pref_clear_location_summary">Remove all directory locations from history</string>
    <string name="pref_open_source_license_key">pref_about_key</string>
    <string name="pref_open_source_license_title">Open-source license</string>
    <string name="pref_open_source_license_summary">Display license notice</string>
    <string name="pref_interface_title">Interface</string>
    <string name="pref_font_picker_key">pref_font_picker_key</string>
    <string name="pref_font_picker_title">Font size</string>
    <string name="pref_font_picker_summary">Set font size of list items</string>
    <string name="pref_font_picker_dlg_title">Setup font size</string>
    <string name="pref_shell_executor_def">/system/bin/sh</string>
    <string name="pref_colorize_key">pref_colorize_key</string>
    <string name="pref_colorize_title">Colorize</string>
    <string name="pref_info_title">Information</string>
    <string name="pref_colorize_summary">Colorize list items by file type</string>
    <string name="pref_archive_item_color_key">pref_archive_color_key</string>
    <string name="pref_archive_item_color_title">Archive files color</string>
    <string name="pref_archive_item_color_summary">Setup color for archive list items</string>
    <string name="pref_archive_item_color_dlg_title">Setup archive color</string>
    <string name="pref_shell_item_color_key">pref_shell_color_key</string>
    <string name="pref_shell_item_color_title">Shell-script files color</string>
    <string name="pref_shell_item_color_summary">Setup color for shell-scripts list items</string>
    <string name="pref_shell_item_color_dlg_title">Setup shell color</string>
    <string name="pref_doc_item_color_key">pref_doc_color_key</string>
    <string name="pref_doc_item_color_title">Document files color</string>
    <string name="pref_doc_item_color_summary">Setup color for textual list items</string>
    <string name="pref_doc_item_color_dlg_title">Setup document color</string>
    <string name="pref_images_item_color_key">pref_images_color_key</string>
    <string name="pref_images_item_color_title">Image files color</string>
    <string name="pref_images_item_color_summary">Setup color for image list items</string>
    <string name="pref_images_item_color_dlg_title">Setup image color</string>
    <string name="pref_media_item_color_key">pref_media_color_key</string>
    <string name="pref_media_item_color_title">Media files color</string>
    <string name="pref_media_item_color_summary">Setup color for media list items</string>
    <string name="pref_media_item_color_dlg_title">Setup media color</string>
    <string name="color_picker_template_text">Template text</string>
    <string name="pref_term_bg_color_key">pref_term_bg_color_key</string>
    <string name="pref_term_bg_color_title">Terminal background color</string>
    <string name="pref_term_bg_color_summary">Setup background color for terminal screen</string>
    <string name="pref_term_bg_color_dlg_title">Setup terminal background</string>
    <string name="pref_app_version_key">pref_app_version</string>
    <string name="pref_app_version_title">App version</string>
    <string name="pref_back_def_colorize_key">pref_back_def_colorize_key</string>
    <string name="pref_back_def_colorize_title">Reset colorize</string>
    <string name="pref_back_def_colorize_summary">Reset to default customized colors</string>
    <!-- Context menus -->
    <string name="context_menu_properties">Properties</string>
    <string name="context_menu_compress">Compress</string>
    <string name="context_menu_share">Share</string>
    <string name="context_menu_text_type">Type</string>
    <string name="context_menu_text_path">Path</string>
    <string name="context_menu_text_modified">Las modified</string>
    <string name="context_menu_text_size">Size</string>
    <string name="context_menu_text_can_read">Can read</string>
    <string name="context_menu_text_can_write">Can write</string>
    <string name="context_menu_text_can_exec">Can execute</string>
    <string name="context_menu_text_size_computation">Computation of size...</string>
</resources>
