<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="6dp"
                android:paddingLeft="6dp">
    <RelativeLayout
            android:id="@+id/file_modify_time_container"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/terminal_modify_column_width"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/file_modify_time"
                style="@style/terminal_list_title_style"
                android:text="@string/title_file_modify_time"/>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/file_size_container"
            android:layout_toLeftOf="@id/file_modify_time_container"
            android:layout_width="@dimen/terminal_size_column_width"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/file_size"
                style="@style/terminal_list_title_style"
                android:text="@string/title_file_size"/>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/file_name_container"
            android:layout_toLeftOf="@id/file_size_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/file_name"
                style="@style/terminal_list_title_style"
                android:text="@string/title_file_name"/>
    </RelativeLayout>
</RelativeLayout>